--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.3",
     "lucide-react": "^0.377.0",
     "next": "14.2.3",
     "preline": "^2.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
+    "zod": "^3.23.6"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
