--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
+    "firebase": "^10.11.1",
     "lucide-react": "^0.377.0",
     "next": "14.2.3",
     "preline": "^2.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-firebase-hooks": "^5.1.1",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "zod": "^3.23.6"
@@ -27,6 +29,8 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
