feat(auth): completed auth using credentials and google (oauth) provider managed by next-auth

--- a/.env
+++ b/.env
@@ -6,6 +6,9 @@ NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=757430005114
 NEXT_PUBLIC_FIREBASE_APP_ID=1:757430005114:web:79a78e7c9b41c196003ac3
 NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=G-SNGDXPXZZL
 
-NEXT_PRIVATE_SESSION_SECRET=zjP9h6ZI5LoSKCRj
-
 NEXT_PUBLIC_BACKEND_SERVER_URL=http://localhost:4000
+
+AUTH_SECRET=EmL24c7M1HTeMssj+uQzM61pO3KngUCeAaBL5LN9/mg=
+
+AUTH_GOOGLE_ID=470865723156-cstu8f78tdc1k5dt30virooqdfv4p1fd.apps.googleusercontent.com
+AUTH_GOOGLE_SECRET=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
