--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@tanstack/react-query-devtools": "^5.36.0",
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.6.8",
+    "axios-auth-refresh": "^3.3.6",
     "clsx": "^2.1.1",
     "firebase": "^10.11.1",
     "immer": "^10.1.1",
     "jose": "^5.3.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.377.0",
     "next": "14.2.3",
+    "next-auth": "^5.0.0-beta.18",
     "preline": "^2.1.0",
     "react": "^18",
     "react-dom": "^18",
