--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^18",
     "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.51.4",
+    "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "tailwind-merge": "^2.3.0",
