--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.51.4",
     "react-redux": "^9.1.2",
+    "react-router-dom": "^6.23.1",
     "redux": "^5.0.1",
     "tailwind-merge": "^2.3.0",
     "use-immer": "^0.9.0",
