--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-hook-form": "^7.51.4",
     "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.2",
+    "react-simple-typewriter": "^5.0.1",
     "redux": "^5.0.1",
     "tailwind-merge": "^2.3.0",
     "use-immer": "^0.9.0",
