--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios-auth-refresh": "^3.3.6",
     "clsx": "^2.1.1",
     "firebase": "^10.11.1",
+    "framer-motion": "^11.2.6",
     "immer": "^10.1.1",
     "jose": "^5.3.0",
     "js-cookie": "^3.0.5",
@@ -31,8 +32,8 @@
     "react-hook-form": "^7.51.4",
     "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.2",
-    "react-simple-typewriter": "^5.0.1",
     "react-router-dom": "^6.23.1",
+    "react-simple-typewriter": "^5.0.1",
     "redux": "^5.0.1",
     "tailwind-merge": "^2.3.0",
     "use-immer": "^0.9.0",
