--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lucide-react": "^0.377.0",
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.18",
+    "nextjs-toploader": "^1.6.12",
     "preline": "^2.1.0",
     "react": "^18",
     "react-dom": "^18",
