--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.36.0",
     "@tanstack/react-query-devtools": "^5.36.0",
     "@types/js-cookie": "^3.0.6",
+    "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.6.8",
     "axios-auth-refresh": "^3.3.6",
     "clsx": "^2.1.1",
@@ -43,6 +44,7 @@
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
     "@tanstack/eslint-plugin-query": "^5.35.6",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
