--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.6.8",
     "axios-auth-refresh": "^3.3.6",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "firebase": "^10.11.1",
     "framer-motion": "^11.2.6",
     "immer": "^10.1.1",
@@ -36,6 +37,7 @@
     "react-router-dom": "^6.23.1",
     "react-simple-typewriter": "^5.0.1",
     "redux": "^5.0.1",
+    "socket.io-client": "^4.7.5",
     "tailwind-merge": "^2.3.0",
     "use-immer": "^0.9.0",
     "zod": "^3.23.6"
